--- a/MyTypeTests_NUnit/MyTypeTests_NUnit.csproj
+++ b/MyTypeTests_NUnit/MyTypeTests_NUnit.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ArgsArrays\ArgsArrays.csproj" />
+    <ProjectReference Include="..\MyTypeTestMembers\MyTypeTestMembers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
