--- a/MyTypeTests_xUnit/MyTypeTests_xUnit.csproj
+++ b/MyTypeTests_xUnit/MyTypeTests_xUnit.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ArgsArrays\ArgsArrays.csproj" />
+    <ProjectReference Include="..\TestMembers\TestMembers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
