--- a/MyTypeTests_NUnit/MyTypeTests_NUnit.csproj
+++ b/MyTypeTests_NUnit/MyTypeTests_NUnit.csproj
@@ -18,8 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ArgsArrays\ArgsArrays.csproj" />
-    <ProjectReference Include="..\MyTypeTestMembers\MyTypeTestMembers.csproj" />
+    <ProjectReference Include="..\TestMembers\TestMembers.csproj" />
   </ItemGroup>
 
   <ItemGroup>
