--- a/MyTypeTests_xUnit/MyTypeTests_xUnit.csproj
+++ b/MyTypeTests_xUnit/MyTypeTests_xUnit.csproj
@@ -23,5 +23,9 @@
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
-
+  
+  <ItemGroup>
+    <Content Include="xunit.runner.json" CopyToOutputDirectory="PreserveNewest" />
+  </ItemGroup>
+  
 </Project>
